# ncei-access

./: .gitignore  README.md  pyproject.toml  readme.ipynb  sample.py
docs/source/: conf.py  index.rst
ncei_access/: __init__.py  exceptions.py  models.py  ncei_accessor.py  rest_adapter.py
ncei_access/data/: daily-summaries.json  datasets.json
tests/: test_models.py  test_ncei_accessor.py  test_rest_adapter.py
