[project]
name = "ncei-access"
version = "0.1"
description = "python wrapper for the NCEI API"
readme = "README.md"
authors = [{ name = "John Sherrill" }]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
classifiers = ["License :: OSI Approved :: Apache Software License"]
dependencies = []
